--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "web": "expo start --web",
     "lint": "eslint .",
     "format": "prettier --write .",
+    "format-check": "prettier --check .",
+    "type-check": "tsc --noEmit",
+    "check": "npm run format-check && npm run lint && npm run type-check",
     "prepare": "",
     "lint-staged": "lint-staged"
   },
@@ -38,15 +41,6 @@
     "lint-staged": "^16.1.0",
     "prettier": "^3.5.3",
     "typescript": "~5.8.3"
-  },
-  "lint-staged": {
-    "*.ts?(x)": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.{json,md}": [
-      "prettier --write"
-    ]
   },
   "private": true
 }
