--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "format-check": "prettier --check .",
     "type-check": "tsc --noEmit",
     "check": "npm run format-check && npm run lint && npm run type-check",
-    "prepare": "",
+    "prepare": "husky",
     "lint-staged": "lint-staged"
   },
   "dependencies": {
@@ -34,7 +34,7 @@
     "@types/react": "~19.0.10",
     "@typescript-eslint/eslint-plugin": "^8.33.0",
     "@typescript-eslint/parser": "^8.33.0",
-    "eslint": "^9.28.0",
+    "eslint": "8.57.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-react": "^7.37.5",
     "husky": "^9.1.7",
