--- a/package.json
+++ b/package.json
@@ -17,20 +17,22 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@tanstack/react-query": "^5.80.5",
+    "@tanstack/react-query-devtools": "^5.80.5",
     "expo": "53.0.9",
+    "expo-constants": "~17.1.6",
+    "expo-linking": "~7.1.5",
+    "expo-router": "~5.0.7",
+    "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
+    "lucide-react-native": "^0.513.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
-    "react-native-web": "^0.20.0",
-    "expo-router": "~5.0.7",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "expo-linking": "~7.1.5",
-    "expo-constants": "~17.1.6",
-    "@tanstack/react-query": "^5.80.5",
-    "@tanstack/react-query-devtools": "^5.80.5",
-    "expo-secure-store": "~14.2.3",
+    "react-native-svg": "15.11.2",
+    "react-native-web": "^0.20.0",
     "zod": "^3.25.51"
   },
   "devDependencies": {
@@ -44,6 +46,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.1.0",
     "prettier": "^3.5.3",
+    "react-native-svg-transformer": "^1.5.1",
     "typescript": "~5.8.3"
   },
   "private": true
