--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@hookform/resolvers": "^5.1.1",
     "@tanstack/react-query": "^5.80.5",
     "@tanstack/react-query-devtools": "^5.80.5",
     "expo": "53.0.9",
@@ -28,6 +29,7 @@
     "lucide-react-native": "^0.513.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-hook-form": "^7.57.0",
     "react-native": "0.79.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
