--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@tanstack/react-query": "^5.80.5",
     "@tanstack/react-query-devtools": "^5.80.5",
-    "expo": "53.0.9",
+    "expo": "^53.0.11",
     "expo-asset": "~11.1.5",
     "expo-constants": "~17.1.6",
     "expo-dev-client": "~5.2.0",
@@ -34,6 +34,8 @@
     "react-dom": "19.0.0",
     "react-hook-form": "^7.57.0",
     "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
