feat(gradient): re-added the linear gradient view

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-asset": "~11.1.5",
     "expo-constants": "~17.1.6",
     "expo-dev-client": "~5.2.0",
+    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.0.7",
     "expo-secure-store": "~14.2.3",
@@ -41,8 +42,7 @@
     "react-native-svg": "15.11.2",
     "react-native-vision-camera": "^4.6.4",
     "react-native-web": "^0.20.0",
-    "zod": "^3.25.51",
-    "expo-linear-gradient": "~14.1.5"
+    "zod": "^3.25.51"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
