--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
     "@tanstack/react-query-devtools": "^5.80.5",
     "expo": "^53.0.11",
     "expo-asset": "~11.1.5",
+    "expo-auth-session": "~6.2.0",
     "expo-constants": "~17.1.6",
     "expo-dev-client": "~5.2.0",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.5",
+    "expo-random": "^14.0.1",
     "expo-router": "~5.0.7",
     "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
+    "expo-web-browser": "~14.2.0",
     "lodash": "^4.17.21",
     "lucide-react-native": "^0.513.0",
     "react": "19.0.0",
